Add documentation to testing notebook, small cleanup0

--- a/notebooks/X_save_df.ipynb
+++ b/notebooks/X_save_df.ipynb
@@ -70,6 +70,7 @@
    "outputs": [],
    "source": [
     "def get_df_save_path(fc: UnitDataProcessing, fname: str):\n",
+    "    # todo does not work with surveys all\n",
     "    return os.path.join(fc.config.data.raw, fc.config.surveys[0],\n",
     "                        fc.config.survey_version[0], 'processed_data', fname)\n",
     "\n",
