--- a/notebooks/7_process_f__multi_option_question.ipynb
+++ b/notebooks/7_process_f__multi_option_question.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:43:48.047684Z",
+     "start_time": "2023-08-30T16:43:47.130864Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -13,7 +18,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:43:48.084759Z",
+     "start_time": "2023-08-30T16:43:48.048228Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext memory_profiler"
@@ -22,17 +32,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:43:48.123137Z",
+     "start_time": "2023-08-30T16:43:48.085473Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from utils.import_utils import *\n",
+    "\n",
     "from hydra import initialize, initialize_config_module, initialize_config_dir, compose\n",
-    "from src.feature_processing import *\n",
+    "\n",
     "from src.item_processing import  *\n",
     "from src.utils.stats_utils import *\n",
-    "import plotly.express as px\n",
-    "import seaborn as sns\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -40,7 +52,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:43:48.211980Z",
+     "start_time": "2023-08-30T16:43:48.124313Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with initialize(config_path='../configuration', version_base='1.1'):\n",
@@ -50,7 +67,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:44:08.526971Z",
+     "start_time": "2023-08-30T16:43:48.212330Z"
+    }
+   },
    "outputs": [],
    "source": [
     "features_class = ItemFeatureProcessing(config)"
@@ -59,7 +81,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:44:11.483087Z",
+     "start_time": "2023-08-30T16:44:08.525406Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df_item = features_class.df_item\n",
@@ -69,18 +96,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:44:11.564760Z",
+     "start_time": "2023-08-30T16:44:11.485270Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "filter_condition = (df_item['type']=='MultyOptionsQuestion')\n",
     "feature_name = 'f__multi_option_question'\n",
-    "score_name = 's__multi_option_question'\n",
-    "df = df_item[filter_condition].copy()\n",
+    "# Answer single question is calculated at responsible level\n",
+    "\n",
+    "score_name = self.rename_feature(feature_name)\n",
+    "\n",
+    "multi_question_mask = (self.df_item['type'] == 'MultyOptionsQuestion')\n",
+    "\n",
+    "df = self.df_item[multi_question_mask].copy()\n",
     "# Select only those variables that have at least three distinct values and more than one hundred records\n",
-    "\n",
-    "frequency = 100\n",
-    "valid_variables = df.groupby('variable_name').filter(lambda x: len(x) >= frequency)\n",
-    "\n",
+    "valid_variables = df.groupby('variable_name').filter(lambda x: len(x) >= 100)\n",
     "# Get the unique variable names that meet the conditions\n",
     "variables = valid_variables['variable_name'].unique()"
    ]
@@ -88,14 +121,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:44:16.931472Z",
+     "start_time": "2023-08-30T16:44:11.566862Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for var in variables:\n",
     "\n",
     "    mask = (df['variable_name']==var) \n",
-    "    unique_values = len([v for v in df[mask]['value'].explode().unique() if v!='##N/A##'])\n",
-    "    entropy_df = df[mask].groupby('responsible')['value'].apply(calculate_list_entropy,unique_values=unique_values, min_record_sample=5).copy()\n",
+    "    unique_values = len([v for v in df[mask]['value'].explode().unique() if v != '##N/A##'])\n",
+    "    entropy_df = df[mask].groupby('responsible')['value'].apply(calculate_list_entropy,\n",
+    "                                                                unique_values=unique_values,\n",
+    "                                                                min_record_sample=5).copy()\n",
     "    entropy_df = entropy_df.reset_index()\n",
     "    entropy_df = entropy_df[~pd.isnull(entropy_df['value'])]\n",
     "    \n",
@@ -118,13 +158,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:44:17.486407Z",
+     "start_time": "2023-08-30T16:44:16.933178Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for var in variables:\n",
     "    mask = (df['variable_name']==var)\n",
-    "    unique_values = len([v for v in df[mask]['value'].explode().unique() if v!='##N/A##'])\n",
-    "    entropy_df = df[mask].groupby('responsible')['value'].apply(calculate_list_entropy,unique_values=unique_values, min_record_sample=5).copy()\n",
+    "    unique_values = len([v for v in df[mask]['value'].explode().unique() if v != '##N/A##'])\n",
+    "    entropy_df = df[mask].groupby('responsible')['value'].apply(calculate_list_entropy,\n",
+    "                                                                unique_values=unique_values,\n",
+    "                                                                min_record_sample=5).copy()\n",
     "    entropy_df = entropy_df.reset_index()\n",
     "    entropy_df = entropy_df[~pd.isnull(entropy_df['value'])]\n",
     "    \n",
@@ -141,7 +188,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-30T16:44:17.647526Z",
+     "start_time": "2023-08-30T16:44:17.481138Z"
+    }
+   },
    "outputs": [],
    "source": [
     "data = df.groupby(['responsible','variable_name']).agg({score_name: 'mean'})\n",
